# mini_ai_camera

./: README.md  config.json  csi_camera.py  data_logger.service  data_logger.sh  data_loggers.py  detector_data_logger.py  get_args.py  imx500_detector.py  pyproject.toml  utils.py
models/: bird_id_v1.rpk  common_bird_names.txt  yolov8n.rpk
src/ai_cam/: cli.py  config.py  csi_camera.py  data_loggers.py  detector_data_logger.py  imx500_detector.py  logging_.py  systemd.py  utils.py
src/mini_ai_camera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
